# BAITUL_HIKMA_book_lab_2.0

.devcontainer/: devcontainer.json
backend/: .dockerfile  .dockerignore  Dockerfile  database.py  docker-compose.yml  main.py  model.py  pyproject.toml  railway.json  requirements.txt  server.py  vercel.json
client/: Procfile  build.sh  pyproject.toml  requirements.txt
client/src/client/: library_manager.py
client/src/client/pages/: ➕Add-Book.py  🆙Update-Read-Status.py  📊Books-Statistic.py  📕Books-list🧾.py  🔍Search-Book.py  🗑️Delete-book.py
