[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.11",
    "mangum>=0.19.0",
    "mypy>=1.15.0",
    "sqlalchemy>=2.0.39",
    "sqlmodel>=0.0.24",
    "types-requests>=2.32.0.20250306",
]
